fix spacing around buttons

--- a/src/app/elective-picker-container/elective-picker-container.component.less
+++ b/src/app/elective-picker-container/elective-picker-container.component.less
@@ -12,6 +12,8 @@
     user-select: none;
 
     & li {
+      margin-right: 1rem;
+
       & a {
         color: #ad2237;
         border: 2px solid #ad2237;
@@ -31,10 +33,8 @@
         &:active {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         }
-      }
 
-      &.active {
-        a {
+        &.active {
           color: white;
           background-color: #ad2237;
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
